# Portfolio_Projects

AUV_Perception/Ship_Detection/: smart_ship_3.py
AUV_Yaw_Visualizer/: vis.py
Basic_AUV_PID/neerakshi_controls/: CMakeLists.txt  package.xml
Basic_AUV_PID/neerakshi_controls/launch/: controllers.launch  sensor_remap.launch
Basic_AUV_PID/neerakshi_controls/src/: controller.py  depth_autotune.py  sensor_remap.py  sensor_remap_dep.py  sensor_remap_dvl.py
Hand_Sanitizer/: automatic_dispense.ino
Object_Detection_USV/: singaboat_circ_det.py  singaboat_obj_det.py  singaboat_sweep_det.py
ROS_Behavior_Trees/auv_bht/: CMakeLists.txt  package.xml
ROS_Behavior_Trees/auv_bht/action/: auv.action
ROS_Behavior_Trees/auv_bht/src/: auv_action_client.cpp  auv_action_server.cpp  check.cpp  example_client.cpp  example_server.cpp  new.cpp  pub.cpp
ROS_Behavior_Trees/auv_bht/tree/: auv_bh_fd.xml  auv_bh_fd_1.xml
Tensorflow_Object_Detection/Fruit or crop harvesting system/: object_detection_tf2_1_(1).py
eth_zurich_solution/src/: control.py  marker.py  marker_2.py  new_control.py  pcl_subscriber.py  slowdownmyboy.py  stop_service.py  subscriber.py  tf_listener.py
